--- a/index.html
+++ b/index.html
@@ -144,10 +144,14 @@
                 <p>Vuelta a casa</p>
             </div>
             <br>
-
         </div>
         <img data-aos="fade-up" src="./IMAGENES/flower-2-1-800x373.png" alt="">
 
+    </div>
+    <div class="lovestory">
+        <h3>Nuestra historia</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore et sapiente perspiciatis soluta non obcaecati beatae odit! Error natus necessitatibus sint, alias accusantium atque cumque, deserunt perferendis odio facere voluptatem?</p>
+        <img src="" alt="">
     </div>
     <script src="script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
