--- a/index.html
+++ b/index.html
@@ -145,13 +145,20 @@
             </div>
             <br>
         </div>
-        <img data-aos="fade-up" src="./IMAGENES/flower-2-1-800x373.png" alt="">
+        <img data-aos="fade-up" src="./IMAGENES/floresdos.png" alt="">
 
     </div>
+    <br>
     <div class="lovestory">
-        <h3>Nuestra historia</h3>
+      <div class="lovestory-1">
+        <h3><i>Nuestra historia</i></h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore et sapiente perspiciatis soluta non obcaecati beatae odit! Error natus necessitatibus sint, alias accusantium atque cumque, deserunt perferendis odio facere voluptatem?</p>
-        <img src="" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore et sapiente perspiciatis soluta non obcaecati beatae odit! Error natus necessitatibus sint, alias accusantium atque cumque, deserunt perferendis odio facere voluptatem?</p>
+
+      </div>
+      <div class="lovestory-2">
+        <img src="./FOTOS/2.png" alt="">
+      </div>
     </div>
     <script src="script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
