--- a/index.html
+++ b/index.html
@@ -160,6 +160,38 @@
         <img src="./FOTOS/2.png" alt="">
       </div>
     </div>
+    
+
+
+    <div class="accordion">
+        <H3>INFORMACIÓN</H3>
+        <div class="accordion-item">
+            <button class="accordion-header">DRESS CODE</button>
+            <div class="accordion-content">
+                <p>Natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</p>
+            </div>
+        </div>
+
+        <div class="accordion-item">
+            <button class="accordion-header">MESA DE REGALOS</button>
+            <div class="accordion-content">
+                <p>Insert lodging recommendations here.</p>
+            </div>
+        </div>
+
+        <div class="accordion-item">
+            <button class="accordion-header">RSVP</button>
+            <div class="accordion-content">
+                <p>Insert dress code information here.</p>
+            </div>
+        </div>
+
+  
+    </div>
+
+
+
+
     <script src="script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
