--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
       <div class="lovestory-1">
         <h3><i>Nuestra historia</i></h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore et sapiente perspiciatis soluta non obcaecati beatae odit! Error natus necessitatibus sint, alias accusantium atque cumque, deserunt perferendis odio facere voluptatem?</p>
+       <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore et sapiente perspiciatis soluta non obcaecati beatae odit! Error natus necessitatibus sint, alias accusantium atque cumque, deserunt perferendis odio facere voluptatem?</p>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore et sapiente perspiciatis soluta non obcaecati beatae odit! Error natus necessitatibus sint, alias accusantium atque cumque, deserunt perferendis odio facere voluptatem?</p>
+        <br>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore et sapiente perspiciatis soluta non obcaecati beatae odit! Error natus necessitatibus sint, alias accusantium atque cumque, deserunt perferendis odio facere voluptatem?</p>
 
       </div>
@@ -164,7 +169,7 @@
 
 
     <div class="accordion">
-        <H3>INFORMACIÓN</H3>
+        <H3><i>Información</i></H3>
         <div class="accordion-item">
             <button class="accordion-header">DRESS CODE</button>
             <div class="accordion-content">
@@ -185,9 +190,10 @@
                 <p>Insert dress code information here.</p>
             </div>
         </div>
-
   
     </div>
+
+
 
 
 
