--- a/index.html
+++ b/index.html
@@ -75,20 +75,21 @@
             </div>
         </section>
 
-        <section data-aos="fade-up"  class="countdown">
-            <div class="count">
-                <span>173</span> <p>Days</p>
-            </div>
-            <div class="count">
-                <span>23</span> <p>Hours</p>
-            </div>
-            <div class="count">
-                <span>48</span> <p>Minutes</p>
-            </div>
-            <div class="count">
-                <span>40</span> <p>Seconds</p>
-            </div>
-        </section>
+      
+            <section data-aos="fade-up" class="countdown">
+                <div class="count">
+                    <span id="days"></span> <p>Days</p>
+                </div>
+                <div class="count">
+                    <span id="hours"></span> <p>Hours</p>
+                </div>
+                <div class="count">
+                    <span id="minutes"></span> <p>Minutes</p>
+                </div>
+                <div class="count">
+                    <span id="seconds"></span> <p>Seconds</p>
+                </div>
+            </section>
     </main>
 
     <!--
@@ -284,5 +285,37 @@
        alert(`Copiaste los datos de cuenta "${text}" a tu portapapeles`);
      }
    </script>
+   <script>
+    // Establecer la fecha de la boda (Asegúrate de poner la fecha correcta)
+    var weddingDate = new Date("Jan 04, 2025 21:30:00").getTime();
+
+    // Actualizar la cuenta regresiva cada segundo
+    var countdownFunction = setInterval(function() {
+
+        // Obtener la fecha y hora actual
+        var now = new Date().getTime();
+
+        // Encontrar la diferencia entre ahora y la fecha de la boda
+        var distance = weddingDate - now;
+
+        // Cálculos de tiempo para días, horas, minutos y segundos
+        var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+        var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+        var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+        var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+        // Mostrar el resultado en los elementos con los IDs correspondientes
+        document.getElementById("days").innerHTML = days;
+        document.getElementById("hours").innerHTML = hours;
+        document.getElementById("minutes").innerHTML = minutes;
+        document.getElementById("seconds").innerHTML = seconds;
+
+        // Si la cuenta regresiva ha terminado, mostrar un mensaje
+        if (distance < 0) {
+            clearInterval(countdownFunction);
+            document.querySelector(".countdown").innerHTML = "¡La boda ya ha comenzado!";
+        }
+    }, 1000);
+</script>
 </body>
 </html>
