--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <button class="accordion-header">RSVP</button>
             <div class="accordion-content">
                 <p>No olvides confirmar asistencia antes del 04/12/2024. Completá un formulario por persona.</p> 
-                <a  class="boton" href="https://docs.google.com/forms/d/e/1FAIpQLSe-maDNvlU952yO2ByGrbj4tK0nwbPo2yJvkSEaj0bpXHaVNw/viewform?usp=sf_link">CONFIRMAR</a><br> <br> <br>
+                <a  class="boton" href="https://forms.gle/s9X5g6AvuxcAActH7">CONFIRMAR</a><br> <br> <br>
 
             </div>
         </div>
@@ -249,8 +249,8 @@
 <h3 data-aos="fade-up" >La fiesta la haces vos</h3>
 <p data-aos="fade-up" >No nos queremos perder de nada, usa nuestro hashtag y ayudanos a elegir la música de la noche.</p>
 <div class="redes-botones">
-<a data-aos="fade-up"  class="boton" href="#">#LunayMarcos</a>
-<a data-aos="fade-up"  class="boton" href="#">RECOMENDAR</a>
+<a data-aos="fade-up"  class="boton" href="https://www.instagram.com/explore/search/keyword/?q=%23lunaymarcos">#LunayMarcos</a>
+<a data-aos="fade-up"  class="boton" href="https://forms.gle/dE5rrDRzvTT7tGV66">RECOMENDAR</a>
 </div>
 
 </div>
