--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
                 <h3 >LA CEREMONIA</h3>
                 <p  class="horarios"><i>20:30 hs - toma tu lugar <br>  21:00 hs - Ceremonia</i></p>
                 <p  >Parroquia Nuestra Señora de la Paz</p>
-                <p  >Sor Teresa 898, Pilar, Provincia de Buenos Aires, Argentina.</p>
+                <p  >Gualeguaychú Golf Club s/n, B1667 Manuel Alberti, Provincia de Buenos Aires, Argentina.</p>
                 <br>
                 <a data-aos="fade-up" class="boton" href="https://maps.app.goo.gl/pxW961j94sCM2hp78?g_st=ic">CÓMO LLEGAR</a>
             </div>
             <br><br>
             <div data-aos="fade-up" class="reception">
-                <h3  >LA REPECIPCIÓN</h3>
+                <h3  >LA RECEPCIÓN</h3>
                 <p  class="horarios"><i>22:00 hs - Recepción</i></p>
                 <p  >Espacio Pilar I</p>
                 <p  >Chile 1963, La Lonja, Provincia de Buenos Aires, Argentina.</p>
@@ -193,7 +193,6 @@
             <button class="accordion-header">DRESS CODE</button>
             <div class="accordion-content">
                 <p>Elegante. Recordá que el blanco es exclusivo para la novia. Inspirate con nuestro tablero de pinterest</p> 
-                <a class="boton" href="#">PINTEREST</a><br> <br> <br>
 
             </div>
         </div>
