--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <div data-aos="fade-up"  class="accordion-item">
             <button class="accordion-header">DRESS CODE</button>
             <div class="accordion-content">
-                <p>Elegante. Recordá que el blanco es exclusivo para la novia. Inspirate con nuestro tablero de pinterest</p> 
+                <p>Elegante. Recordá que el blanco es exclusivo para la novia. </p> <br>
 
             </div>
         </div>
